# lightmotif

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  COPYING  Cargo.toml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.py  python.yml  rust.yml  test.yml
lightmotif/: Cargo.toml
lightmotif-bench/: Cargo.toml  dna.rs
lightmotif-cli/: Cargo.toml
lightmotif-cli/src/: main.rs
lightmotif-io/: Cargo.toml  README.md
lightmotif-io/benches/: JASPAR2024.meme  JASPAR2024.pwm  jaspar.rs  meme.rs  prodoric.transfac  transfac.rs
lightmotif-io/src/: error.rs  lib.rs
lightmotif-io/src/jaspar/: mod.rs  parse.rs
lightmotif-io/src/jaspar16/: mod.rs  parse.rs
lightmotif-io/src/meme/: mod.rs  parse.rs
lightmotif-io/src/transfac/: mod.rs  parse.rs  reader.rs
lightmotif-io/src/uniprobe/: mod.rs  parse.rs
lightmotif-io/tests/: DREME.meme  Gal4.uniprobe  MA0017.3.pfm  MEME.meme  STREME.meme  autoclust_7_64_17_streme.txt  demo.rs  demo.uniprobe  jaspar16.rs  meme.rs  transfac.rs  uniprobe.rs
lightmotif-py/: .gitignore  Cargo.toml  README.md  build.rs  setup.cfg  setup.py
lightmotif-py/benches/simple/: bench.py
lightmotif-py/docs/: conf.py  index.rst  install.rst  requirements.txt
lightmotif-py/docs/_static/json/: switcher.json
lightmotif-py/docs/api/: count.rst  encoded.rst  index.rst  loader.rst  motif.rst  scanner.rst  scores.rst  scoring.rst  striped.rst  weight.rst
lightmotif-py/docs/api/functions/: create.rst  load.rst  scan.rst  stripe.rst
lightmotif-py/docs/api/motif/: base.rst  jaspar.rst  transfac.rst  uniprobe.rst
lightmotif-py/docs/guide/: copyright.rst  example.ipynb  index.rst  install.rst
lightmotif-py/lightmotif/: __init__.py  io.rs  lib.pyi  lib.rs  pyfile.rs
lightmotif-py/lightmotif/arch/: Cargo.toml  lib.rs
lightmotif-py/lightmotif/lib/: lib.rs
lightmotif-py/lightmotif/tests/: __init__.py  test_dna.py  test_doctest.py  test_load.py  test_pvalue.py  test_scanner.py  test_sequence.py  unittest.rs
lightmotif-tfmpvalue/: Cargo.toml  README.md
lightmotif-tfmpvalue/benches/: exact.rs
lightmotif-tfmpvalue/src/: backup.rs  hash.rs  lib.rs
lightmotif-transfac/: Cargo.toml  README.md
lightmotif-transfac/benches/: parser.rs
lightmotif-transfac/src/: error.rs  lib.rs  parse.rs  reader.rs
lightmotif-transfac/tests/: MA0001.2.transfac  MX000001.transfac  parse.rs
lightmotif/benches/: abyB1.txt  count.rs  ecoli.rs  encode.rs  max.rs  score.rs  stripe.rs  threshold.rs
lightmotif/src/: abc.rs  dense.rs  err.rs  lib.rs  num.rs  pli.rs  pvalue.rs  pwm.rs  sampler.rs  scan.rs  scores.rs  seq.rs  utils.rs
lightmotif/src/io/: transfac.rs
lightmotif/src/pli/: avx2.rs  dispatch.rs  mod.rs  scores.rs  sse2.rs  vector.rs
lightmotif/src/pli/platform/: avx2.rs  generic.rs  mod.rs  neon.rs  sse2.rs
lightmotif/src/pwm/: cdf.rs  dist.rs  mod.rs
lightmotif/tests/: argmax.rs  dna.rs  encode.rs  scan.rs  stripe.rs
pkg/aur/: PKGBUILD.in
src/: abc.rs  dense.rs  lib.rs  pli.rs  pwm.rs  seq.rs
src/io/: mod.rs  transfac.rs
tests/: dna.rs
