[build-system]
requires = ["maturin ~=1.2"]
build-backend = "maturin"

[project]
name = "lightmotif"
dynamic = ["version"]
description = "PyO3 bindings and Python interface to lightmotif, a library for platform-accelerated biological motif scanning using position weight matrices."
readme = 'lightmotif-py/README.md'
requires-python = ">=3.7"
license = { file = "COPYING" }
authors = [
  { name = "Martin Larralde", email = "martin.larralde@embl.de" },
]
keywords = ["bioinformatics", "genomics", "motif", "pssm", "matrix"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

[project.urls]
"Homepage" = "https://github.com/althonos/lightmotif/"
"Bug Tracker" = "https://github.com/althonos/lightmotif/issues"
"Changelog" = "https://github.com/althonos/lightmotif/blob/master/CHANGELOG.md"
"Coverage" = "https://codecov.io/gh/althonos/lightmotif/"
"Documentation" = "https://lightmotif.readthedocs.io/"
"Builds" = "https://github.com/althonos/lightmotif/actions/"
"PyPI" = "https://pypi.org/project/lightmotif"

[tool.maturin]
manifest-path = "lightmotif-py/Cargo.toml"
features = ["extension-module"]
python-source = "lightmotif-py"
module-name = "lightmotif.lib"

[tool.cibuildwheel]
skip = ["*-musllinux_i686"]
before-build = "pip install maturin"
test-command = "python -m unittest lightmotif.tests -v"
build-verbosity = 1
free-threaded-support = false

[tool.cibuildwheel.linux]
environment = { PATH="$HOME/.cargo/bin:$PATH" }
before-all = "curl -sSf https://sh.rustup.rs | sh -s -- -y"

[tool.cibuildwheel.macos]
before-all = ["curl -sSf https://sh.rustup.rs | sh -s -- -y"]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.12" }

[[tool.cibuildwheel.overrides]]
select = "*-macosx_x86_64"
inherit.before-all = "append"
before-all = ["rustup target add x86_64-apple-darwin"]

[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
inherit.before-all = "append"
before-all = ["rustup target add aarch64-apple-darwin"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if typing.TYPE_CHECKING:",
    "@abc.abstractmethod",
    "@abc.abstractproperty",
    "raise NotImplementedError",
    "return NotImplemented",
    "raise UnexpectedError",
    "raise AllocationError",
]

[tool.mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true

["tool.mypy-lightmotif.tests.*"]
ignore_errors = true
