[package]
name = "lightmotif-py"
version = "0.6.0"
authors = ["Martin Larralde <martin.larralde@embl.de>"]
edition = "2021"
license = "MIT"
description = "PyO3 bindings and Python interface to the lightmotif crate."
repository = "https://github.com/althonos/lightmotif"
homepage = "https://github.com/althonos/lightmotif/tree/main/lightmotif-py"
readme = "README.md"
categories = ["science"]
keywords = ["bioinformatics", "python", "bindings", "pssm"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "lightmotif/lib.rs"

[dependencies.lightmotif]
path = "../lightmotif"
version = "0.6.0"
[dependencies]
pyo3 = "0.18.3"
generic-array = "0.14"

[features]
default = []
built = []
extension-module = ["pyo3/extension-module"]
nightly = ["pyo3/nightly"]

[[test]]
name = "unittest"
path = "lightmotif/tests/unittest.rs"
harness = false
