[package]
name = "lightmotif-py"
version = "0.8.0"
authors = ["Martin Larralde <martin.larralde@embl.de>"]
edition = "2021"
license = "MIT OR GPL-3.0-or-later"
description = "PyO3 bindings and Python interface to the lightmotif crate."
repository = "https://github.com/althonos/lightmotif"
homepage = "https://github.com/althonos/lightmotif/tree/main/lightmotif-py"
readme = "README.md"
categories = ["science"]
keywords = ["bioinformatics", "python", "bindings", "pssm"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "lightmotif/lib.rs"

[dependencies.lightmotif]
path = "../lightmotif"
version = "0.8.0"
[dependencies.lightmotif-tfmpvalue]
optional = true
path = "../lightmotif-tfmpvalue"
version = "0.8.0"
[dependencies]
pyo3 = "0.22.0"
generic-array = "1.0.0"

[features]
default = ["pvalues"]
pvalues = ["lightmotif-tfmpvalue"]
built = []
extension-module = ["pyo3/extension-module"]
nightly = ["pyo3/nightly"]

[[test]]
name = "unittest"
path = "lightmotif/tests/unittest.rs"
harness = false
