[package]
name = "lightmotif-tfmpvalue"
version = "0.4.0"
authors = ["Martin Larralde <martin.larralde@embl.de>"]
edition = "2021"
license = "GPL-3.0"
description = "Rust reimplementation of TFMPvalue for the lightmotif crate."
repository = "https://github.com/althonos/lightmotif"
homepage = "https://github.com/althonos/lightmotif"
readme = "README.md"
categories = ["science", "parser-implementations"]
keywords = ["bioinformatics", "motif", "pssm", "pvalue"]

[dependencies.lightmotif]
path = "../lightmotif"
version = "0.4.0"
[dependencies.fnv]
version = "1.0"
optional = true

[features]
default = ["fnv"]
