[package]
name = "lightmotif-tfmpvalue"
version = "0.10.0"
authors = ["Martin Larralde <martin.larralde@embl.de>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "Rust reimplementation of TFMPvalue for the lightmotif crate."
repository = "https://github.com/althonos/lightmotif"
homepage = "https://github.com/althonos/lightmotif"
readme = "README.md"
categories = ["science::bioinformatics", "parser-implementations"]
keywords = ["bioinformatics", "motif", "pssm", "pvalue"]

[dependencies.lightmotif]
path = "../lightmotif"
version = "0.10.0"
default-features = false

