[package]
name = "lightmotif-transfac"
version = "0.5.1"
authors = ["Martin Larralde <martin.larralde@embl.de>"]
edition = "2021"
license = "MIT"
description = "TRANSFAC parser implementation for the lightmotif crate."
repository = "https://github.com/althonos/lightmotif"
homepage = "https://github.com/althonos/lightmotif/tree/main/lightmotif-transfac"
readme = "README.md"
categories = ["science", "parser-implementations"]
keywords = ["bioinformatics", "motif", "parser", "transfac"]

[dependencies.lightmotif]
path = "../lightmotif"
version = "0.5.1"
[dependencies.lightmotif-io]
path = "../lightmotif-io"
version = "0.5.1"
